--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 <div class="container main" ng-controller="MainCtrl">
 	<!-- Title -->
 	<div class="row title">
-		<div class="col-xs-3 name">Ku Jin Shin<span class="position">(Web Developer)</span></div>
+		<div class="col-lg-3 col-sm-5 col-xs-6  name">Ku Jin Shin<span class="position">(Web Developer)</span></div>
 
-		<div class="col-xs-4 contact">
+		<div class="col-lg-4 col-sm-7 col-xs-6  contact">
 			<div class="row">
-				<span class="col-xs-3" style="width:20%">Contact</span>
-				<span class="col-xs-9 border-left">
+				<span class="col-sm-4 hidden-xs" style="width:20%">Contact</span>
+				<span class="col-sm-8  border-left" style="display:block">
 					<i class="fa fa-inbox"></i>. kj2shin@uwaterloo.ca<br>
 					<i class="fa fa-phone"></i>. 123-456-7890
 				</span>
 			</div>
 		</div>
 
-		<div class="col-xs-4 program">
+		<div class="col-lg-4 program hidden-sm hidden-xs">
 			<div class="row">
 				<span class="col-xs-3">Education</span>
 				<span class="col-xs-9 border-left">
@@ -83,7 +83,7 @@
 				<hr class="dotted">
 				<div class="s-body">
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-xs-6 col-xxs-12">
 							<div class="sub-head">Frontend Technologies</div>
 
 							<div ng-repeat="skill in frontendSkills" class="row skill" ng-class="{active: skill.active}">
@@ -110,7 +110,7 @@
 
 						</div>
 
-						<div class="col-md-6">
+						<div class="col-xs-6 col-xxs-12">
 							<div class="sub-head">Backend Technologies</div>
 
 							<div ng-repeat="skill in backendSkills" class="row skill" ng-class="{active: skill.active}">
