Added company logo

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 								<div class="time">2014</div>
 								<div class="events">
 									<div class="pull-left">
-										<img class="events-object img-rounded" src="http://placehold.it/64x64">
+										<img class="events-object img-rounded" src="img/Mercatus.png">
 									</div>
 									<div class="events-body">
 										<div class="events-heading no-select">
@@ -248,7 +248,7 @@
 
 								<div class="events">
 									<div class="pull-left">
-										<img class="events-object img-rounded" src="http://placehold.it/64x64">
+										<img class="events-object img-rounded" src="img/Mercatus.png">
 									</div>
 									<div class="events-body">
 										<div class="events-heading no-select">
@@ -285,7 +285,7 @@
 								<div class="time">2013</div>
 								<div class="events">
 									<div class="pull-left">
-										<img class="events-object img-rounded" src="http://placehold.it/64x64">
+										<img class="events-object img-rounded" src="img/GatewayiQ.png">
 									</div>
 									<div class="events-body">
 										<div class="events-heading no-select">
