--- a/index.html
+++ b/index.html
@@ -223,13 +223,14 @@
 										<div class="events-heading no-select">
 											<span class="position">Software Developer</span>
 											<span class="company">@ Mercatus Technologies</span>
-											<span class="period">(Sept - Present)</span>
+											<span class="period">(Sept - Dec)</span>
 
-											<span class="label label-primary">PHP</span>
-											<span class="label label-primary">jQuery</span>
-											<span class="label label-primary">Primary</span>
-											<span class="label label-primary">Primary</span>
-											<span class="label label-primary">Primary</span>
+											<span class="label label-primary">Angular JS</span>
+											<span class="label label-primary">Laravel</span>
+											<span class="label label-primary">Google Analytics</span>
+											<span class="label label-primary">Heatmap JS</span>
+											<span class="label label-primary">Bootstrap 3</span>
+											<span class="label label-primary">LESS</span>
 										</div>
 
 										<div class="description">
@@ -237,7 +238,10 @@
 												Mercatus enables retailers and advertisers to achieve competitive advantage, boost brand equity, and improve financial performance.
 											</p>
 											<ul>
-
+												<li>Took a role of project lead for the third revision of the application which is built with Angular JS frontend and Laravel backend</li>
+												<li>Occasionally fixed high priority bugs before the release</li>
+												<li>Integrated Google Analytics and Heatmap JS library to create an heatmap for the user usage (event, mouse position, etc.)</li>
+												<li>Revised current application to be mobile responsive with Bootstrap 3</li>
 											</ul>
 										</div>
 									</div>
@@ -258,9 +262,11 @@
 
 											<span class="label label-primary">PHP</span>
 											<span class="label label-primary">jQuery</span>
-											<span class="label label-primary">Primary</span>
-											<span class="label label-primary">Primary</span>
-											<span class="label label-primary">Primary</span>
+											<span class="label label-primary">Bootstrap 2</span>
+											<span class="label label-primary">Backbone JS</span>
+											<span class="label label-primary">Grunt</span>
+											<span class="label label-primary">Jasmine</span>
+											<span class="label label-primary">Phantom JS</span>
 										</div>
 
 
@@ -295,9 +301,9 @@
 
 											<span class="label label-primary">PHP</span>
 											<span class="label label-primary">jQuery</span>
-											<span class="label label-primary">Primary</span>
-											<span class="label label-primary">Primary</span>
-											<span class="label label-primary">Primary</span>
+											<span class="label label-primary">Javscript</span>
+											<span class="label label-primary">HTML</span>
+											<span class="label label-primary">CSS</span>
 										</div>
 
 
@@ -307,10 +313,11 @@
 											</p>
 
 											<ul>
-												<li>UI development and bug fixes using PHP, HTML 5, CSS, AJAX, JavacScript (jQuery)</li>
+												<li>UI development and bug fixes using PHP, HTML, CSS, AJAX, JavacScript (jQuery)</li>
 												<li>Developed automated pricing system which calculates monthly pricing. The
 													invoice is generated as a PDF and it is emailed to the company’s HR. PCI
 													compliance is achieved with the third party called Braintree.</li>
+												<li>Refactored existing PHP structure with the MVC pattern</li>
 											</ul>
 										</div>
 									</div>
