--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<span class="col-sm-4 hidden-xs" style="width:20%">Contact</span>
 				<span class="col-sm-8  border-left" style="display:block">
 					<i class="fa fa-inbox"></i>. kj2shin@uwaterloo.ca<br>
-					<i class="fa fa-phone"></i>. 226-339-3275
+					<i class="fa fa-home"></i>. http://kujinshin.me
 				</span>
 			</div>
 		</div>
