--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Ku Jin Shin's personal website.">
 
-        <title>Ku Jin Shin</title>
+        <title>Ku Jin Shin | Engineer, Developer</title>
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
