Adding old resume; Todo: update resume asap

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <nav class="nav">
                         <ul class="nav-list">
                             <li class="nav-item">
-                                <a class="pure-button" href="https://ca.linkedin.com/in/kujinshin">Resume</a>
+                                <a class="pure-button" href="resume/old_resume.pdf">Resume</a>
                             </li>
                             <li class="nav-item">
                                 <a class="pure-button" href="mailto:wskuj820@gmail.com">Email</a>
@@ -285,7 +285,7 @@
                     <div class="pure-menu pure-menu-horizontal">
                         <ul style="padding:0;">
                             <li class="pure-menu-item">
-                                <a href="/" class="pure-menu-link">Resume</a>
+                                <a href="resume/old_resume.pdf" class="pure-menu-link">Resume</a>
                             </li>
                             <li class="pure-menu-item">
                                 <a href="https://ca.linkedin.com/in/kujinshin" class="pure-menu-link">LinkedIn</a>
