Edit summary; add gatewayiQ

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <h3 class="hide-mobile">
+                    <h3 class="mobile-hide">
                         <a href="https://ca.linkedin.com/in/kujinshin">LinkedIn</a><br>
                         <a href="https://github.com/kj2shin">GitHub</a>
                     </h3>
@@ -58,14 +58,14 @@
 
                         <div class="section-description">
                             <p>
-                                Ku Jin is an engineer, developer, and beginner researcher. He is currently a research assistant at Professor Soo Jeon’s lab in University of Waterloo.
+                                Ku Jin is an engineer, programmer, and beginner researcher. He is currently a research assistant at Professor Soo Jeon’s lab in University of Waterloo.
                                 <br><br>
-                                Ku Jin is finishing his BASc in Mechanical Engineering from University of Waterloo and he is also doing an Accelerated Master’s program towards MASc in Mechanical and Mechatronics Engineering. His research area is robotics and his current focus is
-                                dynamics dexterous manipulation. For his final year project, he is building a personal vehicle that maximizes comfort and portability.
+                                Ku Jin is finishing his BASc in Mechanical Engineering from University of Waterloo and
+                                he is also doing an Accelerated Master’s program towards MASc in Mechanical and Mechatronics Engineering from the same school.
+                                His main research area is robotics and his current focus is dynamic dexterous robot manipulation.
+                                Current direction is to apply reinforcement learning to manipulate robots.
                                 <br><br>
-                                All his previous work experience has been software development. Now, he is trying to combine his software skills with the mechanical engineering knowledge gained from his degree. The first step to this process is doing a research in the robotics
-                                field.
-
+                                Ku Jin is always up for a challenge so don't hesitate to contact him if you have any freelance work or research idea.
                             </p>
                         </div>
                     </section>
@@ -103,6 +103,7 @@
                                 <img class="timeline-img" src="img/logos/fivestars.jpg">
                             </div>
 
+                            <div class="border-left" style="top:13.6em;"></div>
                             <div class="circle"></div>
                             <div class="timeline-block">
                                 <div class="timeline-period">2014 Jan - 2015 Aug</div>
@@ -111,6 +112,16 @@
                                     <a href="https://www.mercatus.com/">Mercatus Technologies Inc.</a>
                                 </div>
                                 <img class="timeline-img" src="img/logos/mercatus.png">
+                            </div>
+
+                            <div class="circle"></div>
+                            <div class="timeline-block">
+                                <div class="timeline-period">2013 May - 2013 Aug</div>
+                                <div class="timeline-title">Web Developer</div>
+                                <div class="timeline-company">
+                                    <a href="https://gatewaylogin.com/marketing.php">gatewayiQ</a>
+                                </div>
+                                <img class="timeline-img" src="img/logos/gatewayiQ.png">
                             </div>
                         </div>
                     </section>
@@ -130,7 +141,8 @@
                             <div class="circle"></div>
                             <div class="timeline-block">
                                 <div class="timeline-period">2016 - Present</div>
-                                <div class="timeline-title">MASc in Mechanical & Mechatronics Engineering</div>
+                                <div class="timeline-title mobile-hide">MASc in Mechanical & Mechatronics Engineering</div>
+                                <div class="timeline-title mobile-show">MASc in MME</div>
                                 <div class="timeline-company">
                                     <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a>
                                 </div>
@@ -140,7 +152,8 @@
                             <div class="circle"></div>
                             <div class="timeline-block">
                                 <div class="timeline-period">2012 - 2017</div>
-                                <div class="timeline-title">BASc in Mechanical Engineering</div>
+                                <div class="timeline-title mobile-hide">BASc in Mechanical Engineering</div>
+                                <div class="timeline-title mobile-show">BASc in ME</div>
                                 <div class="timeline-company">
                                     <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a>
                                 </div>
