Update summary, experience, and skills

--- a/index.html
+++ b/index.html
@@ -58,14 +58,20 @@
 
                         <div class="section-description">
                             <p>
-                                Ku Jin is an engineer, programmer, and beginner researcher. He is currently a research assistant at Professor Soo Jeon’s lab in University of Waterloo.
+                                Ku Jin is an engineer, programmer, and
+                                researcher. He is currently doing his Master's
+                                degree in machanical and mechatronics
+                                engineering at the 
+                                <a
+                                    href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a>
+                                working uner the supervision of 
+                                <a
+                                    href="http://mme.uwaterloo.ca/~soojeon/">Dr.
+                                    Soo Jeon</a>.
                                 <br><br>
-                                Ku Jin is finishing his BASc in Mechanical Engineering from University of Waterloo and
-                                he is also doing an Accelerated Master’s program towards MASc in Mechanical and Mechatronics Engineering from the same school.
-                                His main research area is robotics and his current focus is dynamic dexterous robot manipulation.
-                                Current direction is to apply reinforcement learning to manipulate robots.
-                                <br><br>
-                                Ku Jin is always up for a challenge so don't hesitate to contact him if you have any freelance work or research idea.
+
+                                <b>Current Research Topic:</b><br> Sensory-rich Approach to Design and Control of Dynamic Dexterous Manipulation Robot
+                            
                             </p>
                         </div>
                     </section>
@@ -84,7 +90,7 @@
                             <div class="border-left"></div>
                             <div class="circle"></div>
                             <div class="timeline-block">
-                                <div class="timeline-period">2016 Aug - Present</div>
+                                <div class="timeline-period">2016 Aug - 2016 Dec</div>
                                 <div class="timeline-title">Research Assistant</div>
                                 <div class="timeline-company">
                                     <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a>
@@ -172,6 +178,24 @@
                         </header>
 
                         <div class="section-description" style="margin-top:1em;">
+                            &bull; Control Systems<br>
+                            <div class="skill-container">
+                                <span class="label">Adaptive Control</span>
+                                <span class="label">Multivariable Control Systems</span>
+                                <span class="label">Digital Control Systems</span>
+                                <span class="label">Precision Control Systems</span>
+                            </div>
+
+                            &bull; Robotics<br>
+                            <div class="skill-container">
+                                <span class="label">Autonomous Mobile Robots</span>
+                                <span class="label">Multi-Sensor Data Fusion</span>
+                                <span class="label">Robot Manipulators</span>
+                                <span class="label">ROS</span>
+                                <span class="label">LabVIEW</span>
+                                <span class="label">Microprocessors and Digital Logic</span>
+                            </div>
+
                             &bull; Full Stack Development<br>
                             <div class="skill-container">
                                 <span class="label">Python</span>
@@ -183,21 +207,13 @@
                                 <span class="label">UI/UX Design</span>
                             </div>
 
-                            &bull; Robotics<br>
-                            <div class="skill-container">
-                                <span class="label">Control Theory</span>
-                                <span class="label">MATLAB</span>
-                                <span class="label">System Identification</span>
-                                <span class="label">Robotic Manipulation</span>
-                                <span class="label">ROS</span>
-                            </div>
-
                             &bull; Mechanical Engineering<br>
                             <div class="skill-container">
-                                <span class="label">Dynamics</span>
+                                <span class="label">Classical Mechanics</span>
                                 <span class="label">Fluid Dynamics</span>
                                 <span class="label">Theromdynamics</span>
-                                <span class="label">Advanced Calculus</span>
+                                <span class="label">Heat Transfer</span>
+                                <span class="label">Mechanical Design</span>
                             </div>
 
                         </div>
