--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Montserrat:700" rel="stylesheet">
 
-        <link rel="stylesheet" href="main2.css">
+        <link rel="stylesheet" href="main.css">
 
     </head>
     <body>
