Mobile friendly CSS tweak

--- a/index.html
+++ b/index.html
@@ -35,27 +35,32 @@
 
             <h2>Experience</h2>
             <p>
-                <b>UX Developer</b> @ <a class="smaller-font" href="https://www.viglobal.com/">viGlobal</a><br>
+                <b>UX Developer</b>
+                <span class="nobr">@ <a class="smaller-font" href="https://www.viglobal.com/">viGlobal</a></span><br>
                 (2018 Jan - Present)
             </p>
 
             <p>
-                <b>Research Assistant</b> @ <a class="smaller-font" href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a><br>
+                <b>Research Assistant</b>
+                <span class="nobr">@ <a class="smaller-font" href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a></span><br>
                 (2016 Aug - 2016 Dec)
             </p>
 
             <p>
-                <b>Software Engineer Intern</b> @ <a class="smaller-font" href="http://www.fivestars.com/">FiveStars</a> <br>
+                <b>Software Engineer Intern</b>
+                <span class="nobr">@ <a class="smaller-font" href="http://www.fivestars.com/">FiveStars</a></span><br>
                 (2016 Jan - 2016 Apr)
             </p>
 
             <p>
-                <b>Software Developer Intern</b> @ <a class="smaller-font" href="https://www.mercatus.com/">Mercatus Technologies Inc.</a> <br>
+                <b>Software Developer Intern</b>
+                <span class="nobr">@ <a class="smaller-font" href="https://www.mercatus.com/">Mercatus Technologies Inc.</a></span><br>
                 (2014 Jan - 2015 Aug)
             </p>
 
             <p>
-                <b>Web Developer Intern</b> @ <a class="smaller-font" href="https://gatewaylogin.com/marketing.php">gatewayiQ</a> <br>
+                <b>Web Developer Intern</b>
+                <span class="nobr">@ <a class="smaller-font" href="https://gatewaylogin.com/marketing.php">gatewayiQ</a></span><br>
                 (2013 May - 2013 Aug)
             </p>
 
