Mobile friendly CSS tweak

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <h2>Recommendations</h2>
             <div>
-                <b>Soo Jeon</b> (<i>Associate Professor</i>) <br>
+                <b>Soo Jeon</b> <i class="nobr">(Associate Professor)</i> <br>
                 @ <a class="smaller-font" href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a>
                 <p class="smaller-font">
                     <span class="quote">"</span> Ku Jin has worked for a research project that I originally started with a PhD student who unfortunately had to withdrew from his PhD program early this year. Ku Jin demonstrated high level of work ethic and technical skills. He proved his particular strength in logical thinking and programming as well as troubleshooting tasks.
@@ -109,7 +109,7 @@
             </div>
 
             <div>
-                <b>Frank Kim</b> (<i>Senior Software Engineer</i>) <br>
+                <b>Frank Kim</b> <i class="nobr">(Senior Software Engineer)</i> <br>
                 @ <a class="smaller-font" href="http://www.fivestars.com/">FiveStars</a>
                 <p class="smaller-font">
                     <span class="quote">"</span> Ku Jin had a very successful internship. Obviously he is very bright but he is also very curious. He always wanted to learn more and took on various tasks in different areas, most of which he had no experience. On the social level Ku Jin formed many friendships at the company and is wellliked. Ku Jin was offered informally further employment at FiveStars but this does not fit into his future plans. We know that whatever path Ku Jin follows he will be successful.
@@ -117,7 +117,7 @@
             </div>
 
             <div>
-                <b>Jean-Pierre Lucar</b> (<i>Software Developer Lead</i>) <br>
+                <b>Jean-Pierre Lucar</b> <i class="nobr">(Software Developer Lead)</i>  <br>
                 @ <a class="smaller-font" href="https://www.mercatus.com/">Mercatus Technologies Inc.</a>
                 <p class="smaller-font">
                     <span class="quote">"</span> What more can I say about Ku Jin, he is an absolutely fantastic team member and it was a pleasure having him contribute to Mercatus as a whole. Ku Jin is highly dependable: I had no concerns with assigning him complex tasks involving architecture, design, etc and trusting that this work would be well thought out and clean. He would always ask his team members for input on his ideas and had an easy time seeing another person's point of view. In short, Ku Jin quickly became an important member of the team, was treated and participated like a fulltime employee and made significant impacts on the Mercatus products and culture.
