small style fix

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 @ <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a><br>
                 (2012 - 2017)
                 <ul>
-                  <li>GPA (Overall): <b>3.9/4.0</b></li>
+                  <li>GPA (Overall): <b>3.9</b>/4.0</li>
                   <li>Graduated with Distinction - <i>Dean's Honours List</i></li>
                   <li>Awards & Scholarships:
                       <ul>
