--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <div class="container">
             <h1>Hello,</h1>
-            My name is <b>"Ku Jin</b> Shin"
+            My name is <b>"Ku Jin</b> Shin".
                 <p class="smaller-font">I am a student/researcher doing my Master's
                 degree in Mechanical and Mechatronics
                 Engineering at
@@ -42,12 +42,18 @@
                 <br><br>
                 Reach me @ <a href="https://ca.linkedin.com/in/kujinshin">LinkedIn</a>, <a href="https://github.com/kj2shin">GitHub</a>, <a href="mailto:kujin.shin@gmail.com">Email</a>
             </p>
-
+            <hr>
             <h2>Experience</h2>
             <p>
                 <b>UX Developer</b>
                 <span class="nobr">@ <a class="smaller-font" href="https://www.viglobal.com/">viGlobal</a></span><br>
                 (2018 Jan - Present)
+            </p>
+
+            <p>
+                <b>Teaching Assistant</b>
+                <span class="nobr">@ <a class="smaller-font" href="https://uwaterloo.ca/mechanical-mechatronics-engineering/">University of Waterloo</a></span><br>
+                (2018 Jan - 2018 Apr)
             </p>
 
             <p>
@@ -109,6 +115,8 @@
                 </ul>
             </div>
 
+            <hr>
+
             <h2>Recommendations</h2>
             <div>
                 <b>Soo Jeon</b> <i class="nobr">(Associate Professor)</i> <br>
@@ -122,7 +130,7 @@
                 <b>Frank Kim</b> <i class="nobr">(Senior Software Engineer)</i> <br>
                 @ <a class="smaller-font" href="http://www.fivestars.com/">FiveStars</a>
                 <p class="smaller-font">
-                    <span class="quote">"</span> Ku Jin had a very successful internship. Obviously he is very bright but he is also very curious. He always wanted to learn more and took on various tasks in different areas, most of which he had no experience. On the social level Ku Jin formed many friendships at the company and is wellliked. Ku Jin was offered informally further employment at FiveStars but this does not fit into his future plans. We know that whatever path Ku Jin follows he will be successful.
+                    <span class="quote">"</span> Ku Jin had a very successful internship. Obviously he is very bright but he is also very curious. He always wanted to learn more and took on various tasks in different areas, most of which he had no experience. On the social level Ku Jin formed many friendships at the company and is well-liked. Ku Jin was offered informally further employment at FiveStars but this does not fit into his future plans. We know that whatever path Ku Jin follows he will be successful.
                 </p>
             </div>
 
@@ -132,6 +140,11 @@
                 <p class="smaller-font">
                     <span class="quote">"</span> What more can I say about Ku Jin, he is an absolutely fantastic team member and it was a pleasure having him contribute to Mercatus as a whole. Ku Jin is highly dependable: I had no concerns with assigning him complex tasks involving architecture, design, etc and trusting that this work would be well thought out and clean. He would always ask his team members for input on his ideas and had an easy time seeing another person's point of view. In short, Ku Jin quickly became an important member of the team, was treated and participated like a fulltime employee and made significant impacts on the Mercatus products and culture.
                 </p>
+            </div>
+
+            <hr>
+            <div class="footer">
+                &copy; 2018 | Ku Jin Shin | Reach me @ <a href="mailto:kujin.shin@gmail.com">Email</a>
             </div>
         </div>
     </body>
